fix left padding when on small (thin) screens

--- a/src/pageletes/icons/IconFilters.module.css
+++ b/src/pageletes/icons/IconFilters.module.css
@@ -14,10 +14,6 @@
   overflow: auto;
 }
 
-.icon-filters__toggle button {
-  padding-left: 0;
-}
-
 .licon-filters + .icon-filters__scrim {
   display: none;
 }
@@ -51,11 +47,6 @@
 
   .icon-filters .icon-filters__toggle p {
     display: none;
-  }
-
-  .icon-filters .icon-filters__toggle,
-  .icon-filters.icon-filters--hidden .icon-filters__toggle {
-    justify-content: center;
   }
 
   .icon-filters.icon-filters--active {
@@ -97,6 +88,7 @@
 @media (max-width: 799px) {
   .icon-filters {
     top: calc(var(--header-height) * 2);
+    height: calc(100vh - var(--header-height) * 2);
   }
 }
 
@@ -104,7 +96,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 6px 0px 7px 20px;
+  padding: 6px 0px 7px 12px;
   border-bottom: 1px solid var(--navbar-border-bottom-color);
 }
 
